# Mjolnir

./: .gitignore  Authentication.cpp  Authentication.h  Authentication.ui  CMakeLists.txt  CMakeLists.txt.user.c14e50b  CMakePresets.json  CMakeUserPresets.json  README.md  main.cpp  vcpkg-configuration.json
.github/: FUNDING.yml
Headers/: MainFrame.h  SecondWindow.cpp  SecondWindow.h  appMain.h
Headers/CustomeUI/: Button.h  DropdownButton.h
Mjolnir/: CMakeLists.txt  Mjolnir.cpp  Mjolnir.h
Resource/: resource.qrc
Resources/: app.manifest  mjolnir.aps  mjolnir.rc  resource.h
Sources/: MainFrame.cpp  SecondWindow.cpp  appMain.cpp  main.cpp
Sources/CustomeUI/: Button.cpp  DropdownButton.cpp
headerFiles/: Authentication.h
sourceFiles/: Authentication.cpp  Authentication.ui
